2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Refactoring of several methods so that
	  they take a reference to a TextIter that indicates the position of
	  insertion instead of an int that indicates the offseat of
	  insertion.

2007-07-06  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added FormatEmpty that
	  does decides the format of empty elements, (< />), some changes in
	  FormatEnd that handles non-empty elements. Added
	  DeserializeAttributesType that handles the deserialization of the
	  attributes of the "Type"element.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: More changes to properties of
	  tags.

2007-07-05  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: New time constrains for Serialize
	  and Deserialize.
	* DocumentBufferArchiver.cs: Added FormatStart and FormatEnd methods
	  that adds any needed strings to help visualize the values of the
	  documentation. They use a new method named AddString that adds to
	  the buffer a string with the tag format making it text that is
	  non-serializable and visible to the user.
	* DocumentTagTable.cs: Changed some tag properties to help visualize
	  the documentation.

2007-07-05  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs, DocumentTagTable.cs: Changed names of some
	  tags. Changed from padding-invisible to only padding because we
	  don't want to user see this spaces that are used to get around some
	  TextTag behavior (ie empty elements). The tag padding-visible was
	  changed to a temporary name of "newline" because that was the only
	  character we are using right now to give format to the
	  documentation. A new tag was named format that represents added
	  text to the document to help the visualization of the
	  documentation.

2007-07-04  Hector E. Gomez Morales. <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Minor changes.
