@@ -1,5 +1,10 @@
 2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 
 
+	* DocumentBufferArchiver.cs: Did some minor changes to not cause many
+	  warnings of modifications of a TextIter
+
+2007-07-07  Hector E. Gomez M. <hectoregm@gmail.com> 
+
 	* DocumentBufferArchiver.cs: Refactoring of several methods so that
 	  they take a reference to a TextIter that indicates the position of
 	  insertion instead of an int that indicates the offseat of
